--- a/Index.html
+++ b/Index.html
@@ -3,27 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>DriveVerse</title>
-    <link rel="stylesheet" href="Style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Slab:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="./images/logo.png" type="image/icon type" />
   </head>
   <body>
     <header>
@@ -43,57 +34,70 @@
         <button>Get Started</button>
       </div>
     </header>
-    <div class="banner">
-      <img src="./images/present.jfif" alt="Event Banner" />
-    </div>
-    <section class="about">
-      <div class="about-slogan">
-        <h1>Drive Through the Time</h1>
-        <p>Our signature Event's</p>
-      </div>
 
-      <div class="cards">
-        <div class="card card1">
-          <img src="./images/old.jfif" alt="Ols cars" />
-          <div class="card-content">
-            <p class="card-title">TimeLess Classic</p>
-            <p class="card-description">
-              Step back in time and explore the golden era of <br />automobiles.
-              From elegant designs to roaring <br />
-              engines, our collection of vintage cars.
-            </p>
-          </div>
+    <div class="banner">
+      <div class="banner-discription">
+        <div class="slogan">
+          <p>
+            Experience the Evolution <br />of Car's this Year <br />
+            January 2025 <br />
+          </p>
+          <p class="vintage-slogan" style="color: #d4af37">Vintage</p>
+          <p class="present-slogan" style="color: #4682b4">Present</p>
+          <p class="future-slogan" style="color: #00cdbbe4">future</p>
         </div>
-        <div class="card card2">
-          <img src="./images/present.jfif" alt="Ols cars" />
-          <div class="card-content">
-            <p class="card-title">The Hype of Today</p>
-            <p class="card-description">
-              Witness the marvels of today’s automotive <br />engineering. From
-              luxury sedans to high-speed <br />
-              sports cars, experience the cutting-edge technology, <br />
-              design, and comfort that make today’s cars the center of
-              attention.
-            </p>
-          </div>
-        </div>
-        <div class="card card3">
-          <img src="./images/futures.jfif" alt="Ols cars" />
-          <div class="card-content">
-            <p class="card-title">Driving into the Future</p>
-            <p class="card-description">
-              Explore the innovation of tomorrow with electric <br />
-              vehicles, autonomous driving, and revolutionary <br />
-              concepts that will reshape how we travel.
-            </p>
-          </div>
+        <div class="banner-button">
+          <button>Get Info</button>
+          <button>Buy Tickets</button>
         </div>
       </div>
-    </section>
+      <div class="banner-slideshow">
+        <div class="slide">
+          <img src="./images/banner-image.jfif" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <div class="about">
+      <div class="about-slogan">
+        <h1>What are we Offering ...?</h1>
+        <p>Dicover What makes DriveVerse<br />ExtraOrdinary</p>
+      </div>
+      <div class="about-event">
+        <div class="vintage">
+          <h2>Timeless Classics</h2>
+          <ul>
+            <li>Experience rare , Iconic Model</li>
+            <li>Learn About history</li>
+            <li>Engage with Vintage car enthusiasts</li>
+          </ul>
+        </div>
+        <div class="present">
+          <h2>Modern Marvel's</h2>
+          <ul>
+            <li>Explore Cutting-edge car Designs</li>
+            <li>Witness Live Demonstration</li>
+            <li>
+              Discover the latest trend <br />
+              Automobile Industry
+            </li>
+          </ul>
+        </div>
+        <div class="future">
+          <h2>Futuristic Innovation's</h2>
+          <ul>
+            <li>Preview Concept cars of tomorrow</li>
+            <li>Learn About sustainable Technologies</li>
+            <li>Interact with leading Automobile innovators</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div class="speaker">
       <h1>Legends of the road</h1>
       <p class="speaker-slogan">Our Honorable Speakers</p>
-      <div class="speaker1">
+      <div class="speaker1 first">
         <div class="speaker-discription">
           <h2>Dutch Motor Sport: Racing Beyond Limits</h2>
           <p>
@@ -110,34 +114,149 @@
         </div>
         <div class="speaker1-social"></div>
       </div>
-      <div class="speaker1">
-        <div class="speaker1-img">
+      <div class="speaker1 second">
+        <div class="speaker1-img second-img">
           <img src="./images/carsclubindia.jfif" alt="" />
         </div>
         <div class="speaker-discription">
           <h2>Super Cars Club India: Driving Passion Forward</h2>
           <p>
-            Super Cars Club India is a hub for luxury and performance car enthusiasts. They specialize <br>in hosting exclusive events that spotlight vintage
-             classics, today's luxury cars, and the future of <br>automotive engineering.
+            Super Cars Club India is a hub for luxury and performance car
+            enthusiasts. They specialize <br />in hosting exclusive events that
+            spotlight vintage classics, today's luxury cars, and the future of
+            <br />automotive engineering.
           </p>
         </div>
-        
+
         <div class="speaker1-social"></div>
       </div>
     </div>
-    <div class="Events">
-      div.
+
+    <div class="events">
+      <div class="event-heading">
+        <h1>Event's To Held</h1>
+      </div>
+      <div class="event-cards">
+        <div class="event-underline"></div>
+        <div class="event-card">
+          <img src="./images/Car-Show-Flyer.jpg" alt="event1" />
+          <div class="event-info">
+            <h1>Timless Classics by : Auto Mania</h1>
+            <h2>
+              <i class="fa-solid fa-calendar-days" style="color: grey"></i>
+              Date :January 17 , 2025
+            </h2>
+            <h2><i class="fas fa-location" style="color: red"></i>Venue:</h2>
+            <p>Balewadi Stadium , Baner , Pune 411056</p>
+            <h2><i class="fa-solid fa-clock"></i> Timing :</h2>
+            <p>04:12-pm</p>
+          </div>
+          <div class="event-button">
+            <button>Get Event Detail</button>
+            <button>Add to calendar</button>
+          </div>
+        </div>
+        <div class="event-underline"></div>
+        <div class="event-card">
+          <img src="./images/bmw-event.jpg" alt="event1" />
+          <div class="event-info">
+            <h1>21st BMW Series by : BMW-Pune</h1>
+            <h2>
+              <i class="fa-solid fa-calendar-days" style="color: grey"></i>
+              Date :January 17 , 2025
+            </h2>
+            <h2><i class="fas fa-location" style="color: red"></i>Venue:</h2>
+            <span>Balewadi Stadium , Baner , Pune 411056</span>
+            <h2><i class="fa-solid fa-clock"></i> Timing :</h2>
+            <p>04:12-pm</p>
+          </div>
+          <div class="event-button">
+            <button>Get Event Detail</button>
+            <button>Add to calendar</button>
+          </div>
+        </div>
+        <div class="event-underline"></div>
+        <div class="event-card">
+          <img src="./images/future-car-event.png" alt="event1" />
+          <div class="event-info">
+            <h1>21st BMW Series by : BMW-Pune</h1>
+            <h2>
+              <i class="fa-solid fa-calendar-days" style="color: grey"></i>
+              Date :January 17 , 2025
+            </h2>
+            <h2><i class="fas fa-location" style="color: red"></i>Venue:</h2>
+            <p>Balewadi Stadium , Baner , Pune 411056</p>
+            <h2><i class="fa-solid fa-clock"></i>Timing :</h2>
+            <p>04:12-pm</p>
+          </div>
+          <div class="event-button">
+            <button>Get Event Detail</button>
+            <button>Add to calendar</button>
+          </div>
+        </div>
+        <div class="event-underline"></div>
+      </div>
     </div>
+
+    <div class="contact-us">
+      <div class="contact-us-heading">Contact us For Event Booking</div>
+      <form action="#">
+        <div class="form-row">
+          <div class="input-data">
+            <input type="text" required />
+            <div class="underline"></div>
+            <label for="">First Name</label>
+          </div>
+          <div class="input-data">
+            <input type="text" required />
+            <div class="underline"></div>
+            <label for="">Last Name</label>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="input-data">
+            <input type="text" required />
+            <div class="underline"></div>
+            <label for="">Email Address</label>
+          </div>
+          <div class="input-data">
+            <input type="text" required />
+            <div class="underline"></div>
+            <label for="">Phone Number</label>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="input-data textarea">
+            <textarea rows="6" cols="40" required></textarea>
+            <br />
+            <div class="underline"></div>
+            <label for="">Address</label>
+            <br />
+            <div class="form-row submit-btn">
+              <div class="input-data">
+                <div class="inner"></div>
+                <input type="submit" value="submit" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+
     <footer>
       <div class="footer-logo">
-        <img src="./images/logo.png" alt="Footer Logo" />
+        <img src="./images/logo.png" alt="footer-logo" />
       </div>
-      <div class="social-media-links">
-        <ul>
-          <li><a href="https://facebook.com">Facebook</a></li>
-          <li><a href="https://twitter.com">Twitter</a></li>
-          <li><a href="https://instagram.com">Instagram</a></li>
-        </ul>
+      <div class="footer-socials">
+        <a href="#" class="social-icon"
+          ><i class="fab fa-facebook" style="color: blue"></i
+        ></a>
+        <a href="#" class="social-icon"
+          ><i style="color: black" class="fab fa-github"></i
+        ></a>
+        <a href="#" class="social-icon"
+          ><i style="color: #1c77c2" class="fab fa-linkedin"></i
+        ></a>
       </div>
     </footer>
   </body>
